2005-05-25  Francois Dumont  <dums@stlport...>

	* stlport/ciso646: Creation of this missing C++ standard header STLport
	wrapper.
	
	* stlport/stl/_istream.h, _num_get.c, _algo.c, _monetary.c, _time_facets.h,
	_time_facets.c: Replaced occurences of __in and __out reserved by Microsoft.

2005-05-24  Francois Dumont  <dums@stlport...>

	* stlport/headers: Patch from Michael Fink to avoid inclusion of headers
	not available under evc3.

	* test/unit/*_header_test.cpp: Fix tests for no iostreams mode.

	* src/locale_impl.cpp, locale_impl.cpp: Modify implementation to force 
	correct initialization order of static instances.

	* stlport/strstream: Add _ioserr.h file to avoid inclusion in no iostreams
	mode.

2005-05-23  Petr Ovtchenkov  <ptr@island...>

	* stlport/stl/_config.h: detect endianness for Intel's 64bit Pentium and
	Itanium processors. Thanks Albrecht Fritzsche for contribution.

2005-05-20  Francois Dumont  <dums@stlport...>

	* build/test/eh: Patch from Michael Fink to add EVC4 support for this test
	suite.

	* src/fstream.cpp: Use of Wlodek Szafran implementation for the _Filebuf_base::_M_read
	method which is more performant than the previous one.

	* test/unit/fstream_test.cpp: Add of a test for the special Win32 file format.

	* test/unit: Add of many test to check Standard C/C++ headers independancy
	and correct C header implementation.
	
2005-05-18  Francois Dumont  <dums@stlport...>

	* src/fstream.cpp: Fix buffer overflow in _Filebuf_base::_M_read method
	for the Win32 platform implementation thanks Wlodek Szafran report.

	* src/c_locale_dummy/c_locale_dummy.c: Patch from Michael Fink for wrong C
	prototype.

2005-05-17  Petr Ovtchenkov  <ptr@island...>

	* test/unit/locale_test.cpp: some fixes in moneypunct test, related
	to international currency format; some problems still remains, due to
	unclear specifications---if international currency 3-chars abbreviation
	used in suffix form, additional space will be appended