@@ -19,19 +19,11 @@
 // This file is #included into locale_impl.cpp, due to locale use many
 // statics from locale_impl.cpp
 
-//# include "stlport_prefix.h"
-
-//#include <locale>
-//#include <stdexcept>
-//#include <stl/_algobase.h>
-
-//#include "locale_impl.h"
-
 _STLP_BEGIN_NAMESPACE
 
 static const string _Nameless("*");
 
-#if defined(_STLP_USE_MSVC6_MEM_T_BUG_WORKAROUND)
+#if defined (_STLP_USE_MSVC6_MEM_T_BUG_WORKAROUND)
 #  define locale _STLP_NO_MEM_T_NAME(loc)
 #endif
 
@@ -67,10 +59,6 @@ void _STLP_CALL locale::_M_throw_runtime_error(const char* name) {
   _STLP_THROW(runtime_error(buf));
 }
 
-#if !(defined (_STLP_WIN32THREADS) && defined (_STLP_NEW_PLATFORM_SDK))
-static _STLP_STATIC_MUTEX _Index_lock _STLP_MUTEX_INITIALIZER;
-#endif
-
 // Takes a reference to a locale::id, and returns its numeric index.
 // If no numeric index has yet been assigned, assigns one.  The return
 // value is always positive.
@@ -79,6 +67,7 @@ static size_t _Stl_loc_get_index(locale::id& id) {
 #if defined (_STLP_WIN32THREADS) && defined (_STLP_NEW_PLATFORM_SDK)
     id._M_index = _STLP_ATOMIC_INCREMENT(&(locale::id::_S_max));
 #else
+    static _STLP_STATIC_MUTEX _Index_lock _STLP_MUTEX_INITIALIZER;
     _STLP_auto_lock sentry(_Index_lock);
     size_t new_index = locale::id::_S_max++;
     id._M_index = new_index;
@@ -267,18 +256,17 @@ locale::locale(const locale& L1, const locale& L2, category c)
 
 // Destructor.
 locale::~locale() _STLP_NOTHROW {
-  // _M_impl->decr();
-  if ( _M_impl )
-    _release_Locale_impl( _M_impl );
+  if (_M_impl)
+    _release_Locale_impl(_M_impl);
 }
 
 // Assignment operator.  Much like the copy constructor: just a bit of
 // pointer twiddling.
 const locale& locale::operator=(const locale& L) _STLP_NOTHROW {
   if (this->_M_impl != L._M_impl) {
-    if ( this->_M_impl )
-      _release_Locale_impl( this->_M_impl );
-    this->_M_impl = _get_Locale_impl( L._M_impl );
+    if (this->_M_impl)
+      _release_Locale_impl(this->_M_impl);
+    this->_M_impl = _get_Locale_impl(L._M_impl);
   }
   return *this;
 }
@@ -315,11 +303,11 @@ const locale& _STLP_CALL locale::classic() {
 }
 
 locale _STLP_CALL locale::global(const locale& L) {
-  locale old( _Stl_get_global_locale()->_M_impl );
-  if ( _Stl_get_global_locale()->_M_impl != L._M_impl ) {
-    _release_Locale_impl( _Stl_get_global_locale()->_M_impl );
+  locale old(_Stl_get_global_locale()->_M_impl);
+  if (_Stl_get_global_locale()->_M_impl != L._M_impl) {
+    _release_Locale_impl(_Stl_get_global_locale()->_M_impl);
     // this assign should be atomic, should be fixed here:
-    _Stl_get_global_locale()->_M_impl = _get_Locale_impl( L._M_impl );
+    _Stl_get_global_locale()->_M_impl = _get_Locale_impl(L._M_impl);
 
     // Set the global C locale, if appropriate.
 #if !defined(_STLP_NO_LOCALE_SUPPORT) && !defined(_STLP_WINCE) && !defined(_STLP_WCE_NET)
